# pymcfunc

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  internal.py  pyproject.toml  setup.py  test.py  test_file.py  test_old.py  tox.ini
docs/: changelog.rst  conf.py  index.rst  reference.rst
pkmc/: __init__.py  _type_utils.py  dimensions.py  nbt.py
pkmc/formats/: block.py  block_entity.py  chunk.py  entity.py  item.py  level.py  mob.py  player.py  raids.py
pkmc/world/: __init__.py  level.py  raids.py
pymcfunc/: __init__.py  advancements.py  command.py  command_builder.py  coord.py  coords.py  entities.py  errors.py  func_handler.py  func_handler_bedrock.py  func_handler_java.py  func_handler_universal.py  func_handlers.py  functions.py  internal.py  item_modifiers.py  json_format.py  loot_tables.py  minecraftversion.py  nbt.py  number_providers.py  pack.py  predicates.py  range.py  raw_commands.py  rawcommands.py  rawjson.py  rawtext.py  recipes.py  resource_location.py  selectors.py  utils.py  variables.py  version.py
pymcfunc/data_formats/: advancements.py  base_formats.py  item_modifiers.py  json_formats.py  loot_tables.py  nbt.py  nbt_formats.py  nbt_path.py  nbt_tags.py  number_providers.py  predicates.py  raw_json.py  recipes.py
pymcfunc/data_formats_old/: nbt_path.py
pymcfunc_old/: __init__.py  advancements.py  coords.py  entities.py  func_handlers.py  internal.py  item_modifiers.py  loot_tables.py  number_providers.py  pack.py  predicates.py  rawcommands.py  rawtext.py  recipes.py  selectors.py  variables.py
(+3 files in other folders)
